--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Hello World</h1>
+<h1 align="center">
+Hello World
+</h1>
+<table align="center" style="width:800px;margin-top:0px;margin-bottom:0px;">
+<tbody>
+	<tr align="center">
+		<td bgcolor="black">
 <p>I'm hosted with GitHub Pages.</p>
+		</td>
+		<td bgcolor="black">
+<p>I'm hosted with GitHub Pages.</p>
+		</td>
+	</tr>
+
+</tbody>
+</table>
 </body>
 </html>
