--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
+<!--Samuel Switzer 2020-->
 <!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+<link rel="manifest" href="images/favicon/site.webmanifest">
 </head>
 <body>
 <h1 align="left">Sam Switzer</h1>
-<h3 align="left">Game Dev Portfolio</h3>
+<h3 align="left">Dev Portfolio</h3>
 <hr>
+<!--Menu-->
 <table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
 	<tr align="center">
 		<td width="20%" bgcolor="#3D4E54">
@@ -27,12 +33,14 @@
 	</tr>
 </table>
 
-<hr>
-
+<!--Content-->
 <table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
 	<tr>
 		<td>
 		<p>
+			SITE IS CURRENTLY UNDER CONSTRUCTION, CHECK BACK LATER!
+		<br>
+		<br>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id feugiat est, ullamcorper facilisis nulla. Nulla a leo purus. Mauris aliquam ipsum ac pretium vulputate. Proin et neque interdum, fermentum erat ac, ultricies mauris. Nullam molestie, leo a feugiat facilisis, est odio mattis velit, nec imperdiet dui massa at diam. Aliquam id elit sit amet ligula dictum aliquet vitae et sem. Curabitur nec nisi sed erat pretium posuere.
 		<br>
 		<br>
@@ -56,15 +64,22 @@
 </table>
 
 <hr>
-
+<!--Bottom bar-->
 <table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;">
 	<tbody>
 		<tr>
 			<td>
 				<a href="https://github.io/">
-					<img height="50px" src="https://miro.medium.com/max/700/1*NvNxYIH_VybbraQ2MjJwCQ.png"/>
-</a>
-</td>
+					<img height="50px" src="images/gitpages.png"/>
+				</a>
+			</td>
+			<td>
+
+				<a class="gitlogo" href="https://github.com/SamSwitzer" aria-label="Homepage" >
+      <svg height="48" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="48" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
+    </a>
+
+			</td>
 </tr>
 </tbody>
 </table>
