--- a/artwork.html
+++ b/artwork.html
@@ -39,7 +39,7 @@
 	<tr>
 		<td>
 		<p>
-			SITE IS CURRENTLY UNDER CONSTRUCTION, CHECK BACK LATER!
+			CURRENT PROJECTS
 		<br>
 		<br>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id feugiat est, ullamcorper facilisis nulla. Nulla a leo purus. Mauris aliquam ipsum ac pretium vulputate. Proin et neque interdum, fermentum erat ac, ultricies mauris. Nullam molestie, leo a feugiat facilisis, est odio mattis velit, nec imperdiet dui massa at diam. Aliquam id elit sit amet ligula dictum aliquet vitae et sem. Curabitur nec nisi sed erat pretium posuere.
