--- a/artwork.html
+++ b/artwork.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>la-li-lu-le-lo</title>
+<title>Artwork</title>
 <link rel="stylesheet" href="style.css">
 <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
@@ -39,7 +39,7 @@
 	<tr>
 		<td>
 		<p>
-			CURRENT PROJECTS
+			ARTWORK
 		<br>
 		<br>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id feugiat est, ullamcorper facilisis nulla. Nulla a leo purus. Mauris aliquam ipsum ac pretium vulputate. Proin et neque interdum, fermentum erat ac, ultricies mauris. Nullam molestie, leo a feugiat facilisis, est odio mattis velit, nec imperdiet dui massa at diam. Aliquam id elit sit amet ligula dictum aliquet vitae et sem. Curabitur nec nisi sed erat pretium posuere.
