--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>la-li-lu-le-lo</title>
+<title>Contact</title>
 <link rel="stylesheet" href="style.css">
 <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
@@ -38,27 +38,15 @@
 <table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
 	<tr>
 		<td>
-		<p>
-			CURRENT PROJECTS
-		<br>
-		<br>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id feugiat est, ullamcorper facilisis nulla. Nulla a leo purus. Mauris aliquam ipsum ac pretium vulputate. Proin et neque interdum, fermentum erat ac, ultricies mauris. Nullam molestie, leo a feugiat facilisis, est odio mattis velit, nec imperdiet dui massa at diam. Aliquam id elit sit amet ligula dictum aliquet vitae et sem. Curabitur nec nisi sed erat pretium posuere.
-		<br>
-		<br>
-			Maecenas laoreet tellus ut urna cursus, vel maximus leo ultrices. Suspendisse potenti. Morbi varius a lectus et ornare. Nam luctus ligula ipsum, ac condimentum mauris commodo ac. Phasellus non malesuada turpis, eget rutrum nibh. Ut mattis lectus nec tortor consequat, a aliquam nisl pharetra. Nulla facilisi. Proin aliquam posuere metus at vulputate. Sed mattis scelerisque nulla nec pellentesque. Cras vulputate dapibus odio, et volutpat ipsum elementum eu. Etiam non ullamcorper ex, quis aliquam enim. In pellentesque eu felis quis lacinia.
-			Nulla faucibus semper justo eget condimentum. Vestibulum pharetra arcu porttitor magna sollicitudin vestibulum quis at nibh. In ultrices viverra purus sed lacinia. Vivamus eu condimentum leo. Aenean vestibulum eleifend lacus, ac semper lacus volutpat vel. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi nisi neque, elementum quis facilisis sed, pharetra in justo. Sed et elit libero. Sed sed accumsan nibh. Sed eros est, venenatis nec fringilla nec, iaculis nec metus. Aenean interdum feugiat nisi nec pretium. Proin egestas, ante viverra efficitur elementum, felis libero condimentum lorem, quis bibendum urna massa ut sem. Donec nisi erat, finibus vel purus rutrum, tincidunt pharetra nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+		<p font-color="white">
+			CONTACT ME
 			<br>
 			<br>
-			Etiam vitae congue est. Vestibulum nec est aliquet, finibus nisl in, ultrices quam. Aliquam erat volutpat. Vestibulum gravida vulputate pharetra. Fusce aliquet mauris in quam dictum, a lobortis velit fermentum. Nunc consectetur id nisl et hendrerit. Integer ultrices nulla a ipsum suscipit tempor. Morbi sed fermentum dolor, eu fringilla velit. Suspendisse potenti. Vestibulum nibh mauris, bibendum non cursus nec, interdum eget est. Maecenas laoreet iaculis augue, vel dapibus lacus tempus eu. Suspendisse potenti. Aliquam pulvinar nulla ac fringilla tristique.
+				Email: <a style="text-decoration:none; color:#3498AA;" href="sam.d.switzer@gmail.com">sam.d.switzer@gmail.com</a>
 			<br>
 			<br>
-			Quisque id odio ut ante interdum molestie. Curabitur ut hendrerit nisl. Nam pellentesque metus vitae felis dictum, ut facilisis mi finibus. Donec quis ex non eros viverra bibendum nec ac neque. Maecenas congue libero odio, ac sollicitudin justo congue id. Vestibulum at turpis eget sapien tincidunt pulvinar. Curabitur at ornare arcu, et rhoncus libero. Phasellus magna lectus, consequat vel porta eu, pretium at nulla. Suspendisse ac diam eget sem pulvinar venenatis eget sit amet mauris. Pellentesque tellus mauris, pharetra non ligula at, aliquet porta sem. Donec id maximus diam. Nunc ac vestibulum nulla, eu efficitur arcu. Vestibulum facilisis non dolor eget mattis. Praesent egestas sodales fringilla.
+			Discord: <a style="text-decoration:none; color:#3498AA;">Sam#6928</a>
 			<br>
-			<br>
-			Mauris sed aliquam erat. Aenean suscipit elit eu mauris blandit tristique quis sed felis. Sed vel laoreet nisl. Mauris rhoncus pretium pellentesque. Ut vitae dui ante. Vestibulum molestie quis mauris et placerat. Ut ultrices sagittis odio eget auctor. Donec ullamcorper dui lacus, et condimentum eros egestas ac. Suspendisse non quam metus. Morbi neque risus, imperdiet et sodales non, interdum eget elit. Nam dictum et turpis ac imperdiet. Aliquam erat volutpat. Cras rhoncus arcu nec massa varius interdum eget id libero. Ut ullamcorper augue a purus euismod faucibus.
-			<br>
-			<br>
-			Phasellus auctor magna justo, quis fringilla elit pulvinar vitae. Donec semper lacus dui, vitae ornare tortor pharetra vitae. Praesent volutpat ornare ligula, ut laoreet velit elementum ac. Mauris nulla lorem, suscipit quis nisi quis, elementum auctor risus. Fusce convallis ante mi. Donec euismod enim eget metus ultricies imperdiet. Phasellus tincidunt ex a odio vestibulum, ac auctor ipsum pharetra. Curabitur ultricies libero quis quam ultrices, sed vestibulum felis fringilla. Ut suscipit mauris turpis, nec viverra purus vulputate et. Vivamus consequat arcu at neque porttitor, quis semper ligula condimentum. Nam commodo lorem a diam fringilla, et placerat nisi vestibulum. Maecenas ornare tincidunt euismod. Ut in lorem pulvinar, convallis orci non, porta orci.
 		</p>
 	</td>
 	</tr>
