Fixed email link

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 			CONTACT ME
 			<br>
 			<br>
-				Email: <a style="text-decoration:none; color:#3498AA;" href="sam.d.switzer@gmail.com">sam.d.switzer@gmail.com</a>
+				Email: <a style="text-decoration:none; color:#3498AA;" href="mailto: sam.d.switzer@gmail.com">sam.d.switzer@gmail.com</a>
 			<br>
 			<br>
 			Discord: <a style="text-decoration:none; color:#3498AA;">Sam#6928</a>
