Added basic 404 content

--- a/404.html
+++ b/404.html
@@ -2,6 +2,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> TEST </title>
+  <title> 404 Page not found. </title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="images/favicon/site.webmanifest">
 </head>
+<body>
+
+  <h1 align="center" style="color:#3498AA; font-size: 100px; padding-top: 75px;">
+    404
+  </h1>
+
+  <h2 align="center">
+    Looks like the page you're looking for isn't here. :(
+  </h2>
+</body>
 </html>
