--- a/404.html
+++ b/404.html
@@ -16,7 +16,10 @@
   </h1>
 
   <h2 align="center">
-    Looks like the page you're looking for isn't here. :(
+    Who knows how you got here...
+    <br>
+    <br>
+    Click <a href="http://samswitzer.github.io/" style="text-decoration: none; color:#c9c9c9;">here</a> to go back.
   </h2>
 </body>
 </html>
