Updated Contact page, Fixed subtitle

--- a/artwork.html
+++ b/artwork.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1 align="left">Sam Switzer</h1>
-<h3 align="left">Dev Portfolio</h3>
+<h3 align="left" style="margin-top: -25px; padding-left: 50px;">Dev Portfolio</h3>
 <hr>
 <!--Menu-->
 <table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
@@ -38,7 +38,7 @@
 <table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
 	<tr>
 		<td>
-		<p>
+		<p align="center">
 			ARTWORK
 		<br>
 		<br>
