Added name home link to all pages

--- a/artwork.html
+++ b/artwork.html
@@ -10,7 +10,9 @@
 <link rel="manifest" href="images/favicon/site.webmanifest">
 </head>
 <body>
-<h1 align="left">Sam Switzer</h1>
+	<a style="text-decoration:none;" href="index.html">
+		<h1 align="left">Sam Switzer</h1>
+	</a>
 <h3 align="left" style="margin-top: -25px; padding-left: 50px;">Dev Portfolio</h3>
 <hr>
 <!--Menu-->
