--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 <link rel="manifest" href="images/favicon/site.webmanifest">
 </head>
 <body>
-	<h1 align="left">Sam Switzer</h1>
+	<a style="text-decoration:none;" href="index.html">
+		<h1 align="left">Sam Switzer</h1>
+	</a>
 	<h3 align="left" style="margin-top: -25px; padding-left: 50px;">Dev Portfolio</h3>
 	<hr>
+
 	<!--Menu-->
 	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
 		<tr align="center">
