Added resume to contact

--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,9 @@
 			<br>
 				Discord: <a style="text-decoration:none; color:#3498AA;">Sam#6928</a>
 			<br>
+			<br>
+				Resume: <a style="text-decoration:none; color:#3498AA;" href="/files/resume/Resume.pdf" download>PDF</a>
+			<br>
 			</p>
 		</td>
 	</tr>
