--- a/index.html
+++ b/index.html
@@ -52,25 +52,27 @@
 			<table align="right" style="width:50%;margin:20px;">
 				<tr>
 					<th style="width:50%;">
-					<h3>
-						Favorite Games
-					</h3>
-					<ol>
-						<li> ex
-						<li> ex
-						<li> ex
-						<li> ex
+					<h3>Favorite Games</h3>
+					<ol align="left" style="margin-right:1px;">
+						<li> TalesRunner
+						<li> Oldschool Runescape
+						<li> Factorio
+						<li> Super Monkey Ball 2
+						<li> Dwarf Fortress
 					</ol>
 				</th>
 					<th>
 						<h3>Skills</h3>
-						<ul>
-							<li>
+						<ul align="left" style="margin-right:1px;">
+							<li> UI & UX Design
+							<li> Photoshop
+							<li> Web Development
 						</ul>
+						<br>
 					</th>
 				</tr>
 			</table>
-			<p align="left">
+			<p align="left" style="margin:20px;">
 				Etiam vitae congue est. Vestibulum nec est aliquet, finibus nisl in, ultrices quam. Aliquam erat volutpat. Vestibulum gravida vulputate pharetra. Fusce aliquet mauris in quam dictum, a lobortis velit fermentum. Nunc consectetur id nisl et hendrerit. Integer ultrices nulla a ipsum suscipit tempor. Morbi sed fermentum dolor, eu fringilla velit. Suspendisse potenti. Vestibulum nibh mauris, bibendum non cursus nec, interdum eget est. Maecenas laoreet iaculis augue, vel dapibus lacus tempus eu. Suspendisse potenti. Aliquam pulvinar nulla ac fringilla tristique.
 				<br>
 				<br>
