Updated resume options

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,9 @@
 				Discord: <a style="text-decoration:none; color:#3498AA;">Sam#6928</a>
 			<br>
 			<br>
-				Resume: <a style="text-decoration:none; color:#3498AA;" href="/files/resume/Resume.pdf" download>PDF</a>
+				Resume:
+				<a style="text-decoration:none; color:#3498AA;" href="/files/resume/Resume.pdf">PDF</a> -
+				<a style="text-decoration:none; color:#3498AA;" href="/files/resume/Resume.pdf" download>Download</a>
 			<br>
 			</p>
 		</td>
