--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 			<table align="right" style="width:50%;margin:20px;">
 				<tr>
 					<th style="width:50%;">
-					<h3>Favorite Games</h3>
+					<h3>Favorite Games (Click each for wiki)</h3>
 					<ol align="left" style="margin-right:1px;">
-						<li> TalesRunner
-						<li> Oldschool Runescape
-						<li> Factorio
-						<li> Super Monkey Ball 2
-						<li> Dwarf Fortress
+						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/TalesRunner">TalesRunner</a>
+						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Old_School_RuneScape">Oldschool Runescape</a>
+						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Factorio">Factorio</a>
+						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Super_Monkey_Ball_2">Super Monkey Ball 2</a>
+						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Dwarf_Fortress">Dwarf Fortress</a>
 					</ol>
 				</th>
 					<th>
