--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<h3 align="left" style="margin-top: -25px; padding-left: 50px;">Dev Portfolio</h3>
 	<hr>
 
+	<!--Nav Jump-->
+	<a style="text-decoration:none; color: white; font-size:50px; position:absolute; right:2%; margin:10px;" href="#bottom">&#8681;</a>
+
 	<!--Menu-->
 	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
 		<tr align="center">
@@ -52,7 +55,7 @@
 			<table align="right" style="width:50%;margin:20px;">
 				<tr>
 					<th style="width:50%;">
-					<h3>Favorite Games (Click each for wiki)</h3>
+					<h3>Favorite Games (Click to learn more)</h3>
 					<ol align="left" style="margin-right:1px;">
 						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/TalesRunner">TalesRunner</a>
 						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Old_School_RuneScape">Oldschool Runescape</a>
@@ -83,7 +86,12 @@
 				<br>
 				<br>
 				Phasellus auctor magna justo, quis fringilla elit pulvinar vitae. Donec semper lacus dui, vitae ornare tortor pharetra vitae. Praesent volutpat ornare ligula, ut laoreet velit elementum ac. Mauris nulla lorem, suscipit quis nisi quis, elementum auctor risus. Fusce convallis ante mi. Donec euismod enim eget metus ultricies imperdiet. Phasellus tincidunt ex a odio vestibulum, ac auctor ipsum pharetra. Curabitur ultricies libero quis quam ultrices, sed vestibulum felis fringilla. Ut suscipit mauris turpis, nec viverra purus vulputate et. Vivamus consequat arcu at neque porttitor, quis semper ligula condimentum. Nam commodo lorem a diam fringilla, et placerat nisi vestibulum. Maecenas ornare tincidunt euismod. Ut in lorem pulvinar, convallis orci non, porta orci.
+				<br>
+				<br>
+				Sed hendrerit dictum euismod. Nunc fringilla dui in purus venenatis condimentum. Donec eu libero dui. Aliquam tristique elementum sodales. Duis convallis bibendum molestie. Donec elementum porta nulla, vitae facilisis velit interdum ut. Morbi ipsum purus, lobortis vitae sapien quis, bibendum consectetur libero. Vivamus non vulputate tellus, at feugiat augue. Sed hendrerit et odio accumsan pretium. Quisque pellentesque posuere ligula vitae aliquam. Ut in turpis ornare, finibus nibh non, ullamcorper dui. Cras nisi massa, rutrum vel faucibus et, molestie non magna.
 			</p>
+			<br>
+			<a href="https://steamcommunity.com/id/DrunkSam/" target="_blank"><img align="right"  style="padding:20px;" src="http://steam.mmosvc.com/76561198027033955/v1.png" alt="76561198027033955" /></a>
 			<br>
 			<br>
 			<blockquote cite="https://en.wikiquote.org/wiki/Metal_Gear">
@@ -95,8 +103,13 @@
 		</tr>
 	</table>
 
+	<!--Nav Jump 2-->
+	<a style="text-decoration:none; color: white; font-size:50px; position:absolute; right:2%; margin:10px;" href="#top">&#8679;</a>
+
+
 	<hr>
 	<!--Bottom bar-->
+	<a id="bottom"></a>
 	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;">
 		<tbody>
 			<tr>
