--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 				Sed hendrerit dictum euismod. Nunc fringilla dui in purus venenatis condimentum. Donec eu libero dui. Aliquam tristique elementum sodales. Duis convallis bibendum molestie. Donec elementum porta nulla, vitae facilisis velit interdum ut. Morbi ipsum purus, lobortis vitae sapien quis, bibendum consectetur libero. Vivamus non vulputate tellus, at feugiat augue. Sed hendrerit et odio accumsan pretium. Quisque pellentesque posuere ligula vitae aliquam. Ut in turpis ornare, finibus nibh non, ullamcorper dui. Cras nisi massa, rutrum vel faucibus et, molestie non magna.
 			</p>
 			<br>
-			<a href="https://steamcommunity.com/id/DrunkSam/" target="_blank"><img align="right"  style="padding:20px;" src="http://steam.mmosvc.com/76561198027033955/v1.png" alt="76561198027033955" /></a>
+			<a href="https://steamcommunity.com/id/DrunkSam/" target="_blank"><img align="right" style="padding:20px;" src="http://steam.mmosvc.com/76561198027033955/v1.png" alt="76561198027033955" /></a>
 			<br>
 			<br>
-			<blockquote cite="https://en.wikiquote.org/wiki/Metal_Gear">
-			"...can you hear me? Solid Snake... I'm not dead... Someday, I'll get even with you. Someday... we will meet again!"
-			</blockquote>
+				<blockquote cite="https://en.wikiquote.org/wiki/Metal_Gear">
+				"...can you hear me? Solid Snake... I'm not dead... Someday, I'll get even with you. Someday... we will meet again!"
+				</blockquote>
 			<br>
 			<br>
 		</td>
@@ -104,7 +104,7 @@
 	</table>
 
 	<!--Nav Jump 2-->
-	<a style="text-decoration:none; color: white; font-size:50px; position:absolute; right:2%; margin:10px;" href="#top">&#8679;</a>
+	<a style="text-decoration:none; color: white; font-size:50px; position:absolute; right:2%; padding:10px; margin-top:10px;" href="#top">&#8679;</a>
 
 
 	<hr>
