--- a/current.html
+++ b/current.html
@@ -66,6 +66,9 @@
 	</tr>
 </table>
 
+<!--Nav Jump-->
+<a style="text-decoration:none; color: white; font-size:50px; position:absolute; right:2%; padding:10px; margin-top:10px;" href="#top">&#8679;</a>
+
 <hr>
 <!--Bottom bar-->
 <table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;">
