Centered page titles, aligned content left

--- a/finished.html
+++ b/finished.html
@@ -44,6 +44,8 @@
 			FINISHED WORK
 		<br>
 		<br>
+		</p>
+		<p align="left" style="margin:20px;">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id feugiat est, ullamcorper facilisis nulla. Nulla a leo purus. Mauris aliquam ipsum ac pretium vulputate. Proin et neque interdum, fermentum erat ac, ultricies mauris. Nullam molestie, leo a feugiat facilisis, est odio mattis velit, nec imperdiet dui massa at diam. Aliquam id elit sit amet ligula dictum aliquet vitae et sem. Curabitur nec nisi sed erat pretium posuere.
 		<br>
 		<br>
