--- a/index.html
+++ b/index.html
@@ -49,18 +49,12 @@
 				SITE IS CURRENTLY UNDER CONSTRUCTION, CHECK BACK LATER!
 			</p>
 			<br>
-			<table align="right" style="width:50%;margin:20px;">
+			<div class="main_content">
+
+			<img align="left" style="margin:20px;" src="images/content/me.jpg" class="photo">
+
+			<table align="right" style="width:30%;margin:20px;">
 				<tr>
-					<th style="width:50%;">
-					<h3>Favorite Games (Click to learn more)</h3>
-					<ol align="left" style="margin-right:1px;">
-						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/TalesRunner">TalesRunner</a>
-						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Old_School_RuneScape">Oldschool Runescape</a>
-						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Factorio">Factorio</a>
-						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Super_Monkey_Ball_2">Super Monkey Ball 2</a>
-						<li> <a style="text-decoration:none; color: white;" href="https://en.wikipedia.org/wiki/Dwarf_Fortress">Dwarf Fortress</a>
-					</ol>
-				</th>
 					<th>
 						<h3>Skills</h3>
 						<ul align="left" style="margin-right:1px;">
@@ -68,18 +62,14 @@
 							<li> Photoshop
 							<li> Web Development
 						</ul>
-						<br>
 					</th>
 				</tr>
 			</table>
+
 			<p align="left" style="margin:20px;">
-				Etiam vitae congue est. Vestibulum nec est aliquet, finibus nisl in, ultrices quam. Aliquam erat volutpat. Vestibulum gravida vulputate pharetra. Fusce aliquet mauris in quam dictum, a lobortis velit fermentum. Nunc consectetur id nisl et hendrerit. Integer ultrices nulla a ipsum suscipit tempor. Morbi sed fermentum dolor, eu fringilla velit. Suspendisse potenti. Vestibulum nibh mauris, bibendum non cursus nec, interdum eget est. Maecenas laoreet iaculis augue, vel dapibus lacus tempus eu. Suspendisse potenti. Aliquam pulvinar nulla ac fringilla tristique.
+				Hi there, I'm Sam.
 				<br>
-				<br>
-				Quisque id odio ut ante interdum molestie. Curabitur ut hendrerit nisl. Nam pellentesque metus vitae felis dictum, ut facilisis mi finibus. Donec quis ex non eros viverra bibendum nec ac neque. Maecenas congue libero odio, ac sollicitudin justo congue id. Vestibulum at turpis eget sapien tincidunt pulvinar. Curabitur at ornare arcu, et rhoncus libero. Phasellus magna lectus, consequat vel porta eu, pretium at nulla. Suspendisse ac diam eget sem pulvinar venenatis eget sit amet mauris. Pellentesque tellus mauris, pharetra non ligula at, aliquet porta sem. Donec id maximus diam. Nunc ac vestibulum nulla, eu efficitur arcu. Vestibulum facilisis non dolor eget mattis. Praesent egestas sodales fringilla.
-				<br>
-				<br>
-				Mauris sed aliquam erat. Aenean suscipit elit eu mauris blandit tristique quis sed felis. Sed vel laoreet nisl. Mauris rhoncus pretium pellentesque. Ut vitae dui ante. Vestibulum molestie quis mauris et placerat. Ut ultrices sagittis odio eget auctor. Donec ullamcorper dui lacus, et condimentum eros egestas ac. Suspendisse non quam metus. Morbi neque risus, imperdiet et sodales non, interdum eget elit. Nam dictum et turpis ac imperdiet. Aliquam erat volutpat. Cras rhoncus arcu nec massa varius interdum eget id libero. Ut ullamcorper augue a purus euismod faucibus.
+				Game Dev Student @ SLC, Game collector, Design & Tech enthusiast
 				<br>
 				<br>
 				Phasellus auctor magna justo, quis fringilla elit pulvinar vitae. Donec semper lacus dui, vitae ornare tortor pharetra vitae. Praesent volutpat ornare ligula, ut laoreet velit elementum ac. Mauris nulla lorem, suscipit quis nisi quis, elementum auctor risus. Fusce convallis ante mi. Donec euismod enim eget metus ultricies imperdiet. Phasellus tincidunt ex a odio vestibulum, ac auctor ipsum pharetra. Curabitur ultricies libero quis quam ultrices, sed vestibulum felis fringilla. Ut suscipit mauris turpis, nec viverra purus vulputate et. Vivamus consequat arcu at neque porttitor, quis semper ligula condimentum. Nam commodo lorem a diam fringilla, et placerat nisi vestibulum. Maecenas ornare tincidunt euismod. Ut in lorem pulvinar, convallis orci non, porta orci.
@@ -87,6 +77,7 @@
 				<br>
 				Sed hendrerit dictum euismod. Nunc fringilla dui in purus venenatis condimentum. Donec eu libero dui. Aliquam tristique elementum sodales. Duis convallis bibendum molestie. Donec elementum porta nulla, vitae facilisis velit interdum ut. Morbi ipsum purus, lobortis vitae sapien quis, bibendum consectetur libero. Vivamus non vulputate tellus, at feugiat augue. Sed hendrerit et odio accumsan pretium. Quisque pellentesque posuere ligula vitae aliquam. Ut in turpis ornare, finibus nibh non, ullamcorper dui. Cras nisi massa, rutrum vel faucibus et, molestie non magna.
 			</p>
+		</div>
 			<br>
 			<a href="https://steamcommunity.com/id/DrunkSam/" target="_blank"><img align="right" style="padding:20px;" src="http://steam.mmosvc.com/76561198027033955/v1.png" alt="76561198027033955" /></a>
 			<br>
