--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 			<img align="left" style="margin:20px;" src="images/content/me.jpg" class="photo">
 
-			<table align="right" style="width:30%;margin:20px;">
+			<table align="right" style="width:250px;margin:20px;">
 				<tr>
 					<th>
 						<h3>Skills</h3>
