--- a/index.html
+++ b/index.html
@@ -11,16 +11,34 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-<link rel="manifest" href="images/favicon/site.webmanifest">
+	<link rel="manifest" href="images/favicon/site.webmanifest">
+	<style type="text/css">
+	.photo {
+	width: 200px;
+	padding: 10px;
+	border: 1px solid #c9c9c9;
+	}
+	.gitlogo {
+	    color: #fff;
+			fill: currentColor;
+	}
+	#pagetitle {
+		color: #c9c9c9;
+		font: Arial, sans-serif;
+		font-size: 40px;
+		padding-left: 35px;	
+	}
+	</style>
 </head>
 <body>
 	<a style="text-decoration:none;" href="index.html">
-		<h1 align="left">Sam Switzer</h1>
+		<h1 id="pagetitle" align="left">Sam Switzer</h1>
 	</a>
 	<h3 align="left" style="margin-top: -25px; padding-left: 50px;">Dev Portfolio</h3>
 	<hr>
 
 	<!--Menu-->
+	<div class="menu">
 	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
 		<tr align="center">
 			<td width="20%" bgcolor="#3D4E54">
@@ -40,8 +58,10 @@
 			</td>
 		</tr>
 	</table>
+</div>
 
 	<!--Content-->
+	<div class="content">
 	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;border: 1px solid #c9c9c9;">
 		<tr>
 			<td>
@@ -49,7 +69,6 @@
 				SITE IS CURRENTLY UNDER CONSTRUCTION, CHECK BACK LATER!
 			</p>
 			<br>
-			<div class="main_content">
 
 			<img align="left" style="margin:20px;" src="images/content/me.jpg" class="photo">
 
@@ -77,7 +96,6 @@
 				<br>
 				Sed hendrerit dictum euismod. Nunc fringilla dui in purus venenatis condimentum. Donec eu libero dui. Aliquam tristique elementum sodales. Duis convallis bibendum molestie. Donec elementum porta nulla, vitae facilisis velit interdum ut. Morbi ipsum purus, lobortis vitae sapien quis, bibendum consectetur libero. Vivamus non vulputate tellus, at feugiat augue. Sed hendrerit et odio accumsan pretium. Quisque pellentesque posuere ligula vitae aliquam. Ut in turpis ornare, finibus nibh non, ullamcorper dui. Cras nisi massa, rutrum vel faucibus et, molestie non magna.
 			</p>
-		</div>
 			<br>
 			<a href="https://steamcommunity.com/id/DrunkSam/" target="_blank"><img align="right" style="padding:20px;" src="http://steam.mmosvc.com/76561198027033955/v1.png" alt="76561198027033955" /></a>
 			<br>
@@ -90,12 +108,13 @@
 		</td>
 		</tr>
 	</table>
-
+</div>
 	<!--Nav Jump-->
 	<a style="text-decoration:none; color: white; font-size:50px; position:absolute; right:2%; padding:10px; margin-top:10px;" href="#top">&#8679;</a>
 
 	<hr>
 	<!--Bottom bar-->
+	<div class="bottom">
 	<a id="bottom"></a>
 	<table align="center" style="width:85%;margin-top:0px;margin-bottom:0px;">
 		<tbody>
@@ -116,6 +135,7 @@
 	</tr>
 	</tbody>
 	</table>
+</div>
 
 </body>
 </html>
