Added "Under Construction" message

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ http://www.tooplate.com/view/2087-kalay
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+                        <h1>SITE IS CURRENTLY UNDER CONSTRUCTION</h1>
                          <h2>Recent Work</h2>
                     </div>
                </div>
