--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ http://www.tooplate.com/view/2087-kalay
 
 <title>Sam Switzer - Dev Portfolio</title>
 
+<link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
+
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/magnific-popup.css">
@@ -44,7 +47,7 @@ http://www.tooplate.com/view/2087-kalay
                <div class="col-md-offset-5 col-md-7 col-sm-12">
                     <div class="home-thumb">
                          <h1 class="wow fadeInUp" data-wow-delay="0.4s">Hi, I'm Sam.</h1>
-                         <p class="wow fadeInUp white-color" data-wow-delay="0.6s">3D Modeling & Game Design</p>
+                         <p class="wow fadeInUp white-color" data-wow-delay="0.6s">Artist & Developer</p>
                          <a href="#work" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">tell me more</a>
                     </div>
                </div>
@@ -62,7 +65,6 @@ http://www.tooplate.com/view/2087-kalay
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                        <h1>SITE IS CURRENTLY UNDER CONSTRUCTION</h1>
                          <h2>Recent Work</h2>
                     </div>
                </div>
@@ -72,8 +74,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image1.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">First Title</h4>
-                                   <h2>Graphic Design</h2>
+                                   <h4 class="white-color">Moi3D / 3ds Max</h4>
+                                   <h2>Cassette Tape</h2>
                               </div>
                               <img src="images/work-image1.jpg" class="img-responsive" alt="Work 1">
                          </a>
@@ -85,8 +87,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image2.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Title Two</h4>
-                                   <h2>Photography</h2>
+                                   <h4 class="white-color">Moi3D / 3ds Max / Print</h4>
+                                   <h2>Halo Orb</h2>
                               </div>
                               <img src="images/work-image2.jpg" class="img-responsive" alt="Work 2">
                          </a>
@@ -98,8 +100,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image3.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Third Title</h4>
-                                   <h2>illustration</h2>
+                                   <h4 class="white-color">Photoshop</h4>
+                                   <h2>Zinogre Sketch *Unfinished*</h2>
                               </div>
                               <img src="images/work-image3.png" class="img-responsive" alt="Work 3">
                          </a>
@@ -123,11 +125,29 @@ http://www.tooplate.com/view/2087-kalay
                     <!-- <p>Lorem ipsum dolor sit amet, consectetur venenatis tincidunt.</p> -->
                </div>
 
+
+
+               <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="service-thumb">
+                         <i class="fa fa-github-square"></i>
+                         <h4>Game Development</h4>
+                         <p>Lua / C++ / Unity</p>
+                    </div>
+               </div>
+
+               <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="service-thumb">
+                         <i class="fa fa-window-maximize"></i>
+                         <h4>Web & UI/UX Design</h4>
+                         <p>HTML / CSS / Dreamweaver / Wordpress / InDesign</p>
+                    </div>
+               </div>
+
                <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-thumb">
-                         <i class="fa fa-smile-o"></i>
+                         <i class="fa fa-edit"></i>
                          <h4>Graphic Design</h4>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing morbi venenatis.</p>
+                         <p>Photoshop / Illustrator / Blender</p>
                     </div>
                </div>
 
@@ -135,23 +155,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class="fa fa-camera"></i>
                          <h4>Photography</h4>
-                         <p>Duis sed arcu sed nunc maximus tempor. Maecenas et enim laoreet, pharetra risus vel.</p>
-                    </div>
-               </div>
-
-               <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                    <div class="service-thumb">
-                         <i class="fa fa-lightbulb-o"></i>
-                         <h4>UI/UX design</h4>
-                         <p>Sed tristique, nunc sit amet pellentesque pharetra, sapien urna.</p>
-                    </div>
-               </div>
-
-               <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
-                    <div class="service-thumb">
-                         <i class="fa fa-clone"></i>
-                         <h4>illustration</h4>
-                         <p>Cras ut urna quis nisi luctus molestie tincidunt sed ipsum. Donec gravida laoreet erat.</p>
+                         <p>Photoshop / Lightroom</p>
                     </div>
                </div>
 
@@ -168,12 +172,15 @@ http://www.tooplate.com/view/2087-kalay
                <div class="col-md-4 col-sm-8">
                     <div class="about-image-thumb">
                          <img src="images/profile-image.jpg" class="wow fadeInUp img-responsive" data-wow-delay="0.2s" alt="about image">
+                         <div class="wow fadeInUp" data-wow-delay="1s">
                          <ul class="social-icon">
+                              <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
                               <li><a href="https://github.com/SamSwitzer" class="fa fa-github"></a></li>
                               <li><a href="https://twitter.com/SamSwtzr" class="fa fa-twitter"></a></li>
                             <!--  <li><a href="#" class="fa fa-instagram"></a></li> -->
-                              <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
+
                          </ul>
+                       </div>
                     </div>
                </div>
 
@@ -234,7 +241,7 @@ http://www.tooplate.com/view/2087-kalay
                               <h2>Contact Info</h2>
                          </div>
 
-                         <p><i class="fa fa-map-marker"></i> Cornwall ON, Canada</p>
+                         <p><i class="fa fa-map-marker"></i><a href="https://goo.gl/maps/1qrbaTCGVmSfpUKq8"> Cornwall ON, Canada</a></p>
                          <p><i class="fa fa-comment"></i> <a href="mailto:sam.d.switzer@gmail.com">sam.d.switzer@gmail.com</a></p>
                          <p><i class="fa fa-discord"></i> Sam#6928</p>
                     </div>
@@ -254,10 +261,11 @@ http://www.tooplate.com/view/2087-kalay
                     <p class="white-color">Copyright &copy; 2021 Samuel Switzer</p>
                     <div class="wow fadeInUp" data-wow-delay="1s">
                          <ul class="social-icon">
+                              <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
                               <li><a href="https://github.com/SamSwitzer" class="fa fa-github"></a></li>
                               <li><a href="https://twitter.com/SamSwtzr" class="fa fa-twitter"></a></li>
                             <!-- <li><a href="#" class="fa fa-instagram"></a></li> -->
-                              <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
+
 
                          </ul>
                     </div>
