--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image1.jpg" class="image-popup">
+                         <a href="images/work-image1.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Moi3D / 3ds Max</h4>
-                                   <h2>Cassette Tape</h2>
+                                   <h4 class="white-color">Java</h4>
+                                   <h2>Sam's Cannonball Master</h2>
                               </div>
-                              <img src="images/work-image1.jpg" class="img-responsive" alt="Work 1">
+                              <img src="images/work-image1.5.png" class="img-responsive" alt="Work 1">
                          </a>
                     </div>
                </div>
@@ -135,7 +135,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class="fa fa-github-square"></i>
                          <h4>Game Development</h4>
-                         <p>Lua / C++ / Unity</p>
+                         <p>Java / C++ / Lua</p>
                     </div>
                </div>
 
@@ -143,7 +143,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class="fa fa-window-maximize"></i>
                          <h4>Web & UI/UX Design</h4>
-                         <p>HTML / CSS / Dreamweaver / Wordpress / InDesign</p>
+                         <p>HTML / CSS / Javascript</p>
                     </div>
                </div>
 
@@ -193,51 +193,13 @@ http://www.tooplate.com/view/2087-kalay
                          <!-- SECTION TITLE -->
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h2>More about me</h2>
-                              <p>Graphic Designer, Creative Photographer & Front-end Developer</p>
+                              <p>Script developer for Dreambot, Game Dev Student @ SLC</p>
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
-                              <p>Game Dev Student @ SLC, Game collector, Design & Tech enthusiast</p>
+                              <p>Passion for tech, games, and interesting things.</p>
                          </div>
                     </div>
                </div>
-
-          </div>
-     </div>
-</section>
-
-
-<!-- CONTACT SECTION -->
-<section id="contact" class="parallax-section">
-     <div class="container">
-          <div class="row">
-
-               <div class="col-md-12 col-sm-12">
-                    <!-- SECTION TITLE -->
-                    <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                         <h2>Get in touch</h2>
-                    </div>
-               </div>
-
-               <div class="col-md-7 col-sm-10">
-                    <!-- CONTACT FORM HERE -->
-                    <div class="wow fadeInUp" data-wow-delay="0.4s">
-                        <form id="contact-form" action="#" method="get">
-                              <div class="col-md-6 col-sm-6">
-                                   <input type="text" class="form-control" name="name" placeholder="Name" required="">
-                              </div>
-                              <div class="col-md-6 col-sm-6">
-                                   <input type="email" class="form-control" name="email" placeholder="Email" required="">
-                              </div>
-                              <div class="col-md-12 col-sm-12">
-                                   <textarea class="form-control" rows="5" name="message" placeholder="Message" required=""></textarea>
-                              </div>
-                              <div class="col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6">
-                                   <button id="submit" type="submit" class="form-control" name="submit">Send Message</button>
-                              </div>
-                        </form>
-                    </div>
-               </div>
-
                <div class="col-md-5 col-sm-8">
                     <!-- CONTACT INFO -->
                     <div class="wow fadeInUp contact-info" data-wow-delay="0.4s">
@@ -254,7 +216,6 @@ http://www.tooplate.com/view/2087-kalay
           </div>
      </div>
 </section>
-
 
 <!-- FOOTER SECTION -->
 <footer>
