Added more spaces for projects and added placeholders

--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
+                         <a href="images/work-image4.png" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Java</h4>
+                                   <h2>Sam's Aerial Fishing *In progress*</h2>
+                              </div>
+                              <img src="images/work-image4.png" class="img-responsive" alt="Work 1">
+                         </a>
+                    </div>
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
                          <a href="images/work-image1.png" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <h4 class="white-color">Java</h4>
@@ -99,10 +112,16 @@ http://www.tooplate.com/view/2087-kalay
                     </div>
                </div>
 
+
+          </div>
+     </div>
+     <div class="container">
+          <div class="row">
+
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image3.jpg" class="image-popup">
+                         <a href="images/work-image3.png" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <h4 class="white-color">Photoshop</h4>
                                    <h2>Zinogre Sketch *Unfinished*</h2>
@@ -111,6 +130,33 @@ http://www.tooplate.com/view/2087-kalay
                          </a>
                     </div>
                </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/coming-soon.png" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Placeholder</h4>
+                                   <h2>Coming soon</h2>
+                              </div>
+                              <img src="images/coming-soon.png" class="img-responsive" alt="Work 2">
+                         </a>
+                    </div>
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/coming-soon.png" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Placeholder</h4>
+                                   <h2>Coming soon</h2>
+                              </div>
+                              <img src="images/coming-soon.png" class="img-responsive" alt="Work 3">
+                         </a>
+                    </div>
+               </div>
+               
 
           </div>
      </div>
