Added some recent work

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image4.png" class="image-popup">
+                         <a href="images/work-image4.5.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Java</h4>
-                                   <h2>Sam's Aerial Fishing *In progress*</h2>
+                                   <h4 class="white-color">Java / Photoshop</h4>
+                                   <h2>Sam's Aerial Fishing</h2>
                               </div>
                               <img src="images/work-image4.png" class="img-responsive" alt="Work 1">
                          </a>
@@ -91,13 +91,32 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image1.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Java</h4>
+                                   <h4 class="white-color">Java / Photoshop</h4>
                                    <h2>Sam's Cannonball Master</h2>
                               </div>
                               <img src="images/work-image1.5.png" class="img-responsive" alt="Work 1">
                          </a>
                     </div>
                </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-image5.gif" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h4 class="white-color">Photoshop / Blender</h4>
+                                   <h2>Fourm Logo</h2>
+                              </div>
+                              <img src="images/work-image5.gif" class="fill" alt="Work 2">
+                         </a>
+                    </div>
+               </div>
+
+
+          </div>
+     </div>
+     <div class="container">
+          <div class="row">
 
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
@@ -111,13 +130,6 @@ http://www.tooplate.com/view/2087-kalay
                          </a>
                     </div>
                </div>
-
-
-          </div>
-     </div>
-     <div class="container">
-          <div class="row">
-
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
@@ -140,19 +152,6 @@ http://www.tooplate.com/view/2087-kalay
                                    <h2>Coming soon</h2>
                               </div>
                               <img src="images/coming-soon.png" class="img-responsive" alt="Work 2">
-                         </a>
-                    </div>
-               </div>
-
-               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
-                    <!-- WORK THUMB -->
-                    <div class="work-thumb">
-                         <a href="images/coming-soon.png" class="image-popup">
-                              <div class="work-thumb-overlay">
-                                   <h4 class="white-color">Placeholder</h4>
-                                   <h2>Coming soon</h2>
-                              </div>
-                              <img src="images/coming-soon.png" class="img-responsive" alt="Work 3">
                          </a>
                     </div>
                </div>
