Added a couple missing changes

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ http://www.tooplate.com/view/2087-kalay
                               <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
                               <li><a href="https://github.com/SamSwitzer" class="fa fa-github"></a></li>
                               <li><a href="https://twitter.com/SamSwtzr" class="fa fa-twitter"></a></li>
-                              <li><a href="https://twitter.com/SamSwtzr" class="fa fa-linkedin"></a></li>
+                              <li><a href="https://www.linkedin.com/in/samswitz/" class="fa fa-linkedin"></a></li>
                             <!--  <li><a href="#" class="fa fa-instagram"></a></li> -->
 
                          </ul>
@@ -293,7 +293,7 @@ You can read about what I’m currently working on <a href="updates.html">here</
                               <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
                               <li><a href="https://github.com/SamSwitzer" class="fa fa-github"></a></li>
                               <li><a href="https://twitter.com/SamSwtzr" class="fa fa-twitter"></a></li>
-                              <li><a href="https://twitter.com/SamSwtzr" class="fa fa-linkedin"></a></li>
+                              <li><a href="https://www.linkedin.com/in/samswitz/" class="fa fa-linkedin"></a></li>
                             <!-- <li><a href="#" class="fa fa-instagram"></a></li> -->
 
 
