--- a/updates.html
+++ b/updates.html
@@ -64,12 +64,11 @@ http://www.tooplate.com/view/2087-kalay
                          <!-- SECTION TITLE -->
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h4><a href="index.html#about"><- Back</a></h4></br><h2>Currently working on…</h2>
-                              <p>
-                              	<li>Bot scripting for Old School Runescape, where I have already <a href="index.html#work">released</a> scripts for different experience-gaining or money-making methods.</li></br>
+                              	<li><b>Bot scripting for Old School Runescape, where I have already <a href="index.html#work">released</a> scripts for different experience-gaining or money-making methods.</b></li></br>
 
-								<li>Flash art sheet, where I have multiple designs on one or many pages. This style of art is used by tattoo artists. With an ink machine of my own, I will be practicing the flash art sheets on fake skin and testing out the medium of tattooing.</li></br>
+								<li><b>Flash art sheet, where I have multiple designs on one or many pages. This style of art is used by tattoo artists. With an ink machine of my own, I will be practicing the flash art sheets on fake skin and testing out the medium of tattooing.</b></li></br>
 
-								<li>Top down, Legend of Zelda inspired game. In its early stages, I am developing this for Gameboy. I will be using GBStudio, a visual scripting development tool. Eventually, the game will be available on a gameboy flash cart or emulator.</li>
+								<li><b>Top down, Legend of Zelda inspired game. In its early stages, I am developing this for Gameboy. I will be using GBStudio, a visual scripting development tool. Eventually, the game will be available on a gameboy flash cart or emulator.</b></li></p>
                          </div>
                     </div>
                </div>
@@ -88,9 +87,9 @@ http://www.tooplate.com/view/2087-kalay
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h2>Currently playing…</h2>
                               <p>
-                              	<li>Battlefield 2042. I’ve always been a fan of the Battlefield franchise, and when I learned I could subscribe to Origin’s Pro plan to play the new game, I jumped on. Unfortunately, the game lacks a lot of what made the previous games good. They tried to focus on a more minimalistic approach, but lost a lot of content in the process. The UI is accessible and clean, and the game is fun when it is running properly. It is really disappointing that, after as many games as DICE has put out, they have tried but failed at listening to what their player base will enjoy.</li></br>
+                              	<li><b>Battlefield 2042. I’ve always been a fan of the Battlefield franchise, and when I learned I could subscribe to Origin’s Pro plan to play the new game, I jumped on. Unfortunately, the game lacks a lot of what made the previous games good. They tried to focus on a more minimalistic approach, but lost a lot of content in the process. The UI is accessible and clean, and the game is fun when it is running properly. It is really disappointing that, after as many games as DICE has put out, they have tried but failed at listening to what their player base will enjoy.</b></li></br>
 
-								<li>World of Warcraft. I’ve played WoW for a large part of my life. I’ve also taken very large breaks from it. Everytime I come back to play, it seems like the game has changed almost everything with quality of life, content, and general updates. For an MMO, I find this to be a great thing. Constantly refreshing the way you can play a game keeps people interested, and keeping the player-loved aesthetics and gameplay is something WoW has done a great job with. I’m happy to be jumping back in. For the Horde!</li>
+								<li><b>World of Warcraft. I’ve played WoW for a large part of my life. I’ve also taken very large breaks from it. Everytime I come back to play, it seems like the game has changed almost everything with quality of life, content, and general updates. For an MMO, I find this to be a great thing. Constantly refreshing the way you can play a game keeps people interested, and keeping the player-loved aesthetics and gameplay is something WoW has done a great job with. I’m happy to be jumping back in. For the Horde!</b></li>
                          </div>
                     </div>
                </div>
