Updated past work and dev blog

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ http://www.tooplate.com/view/2087-kalay
 <section id="tellmemore" class="parallax-section">
      <div class="container">
           <div class="row">
-
+			<a href="devblog.html" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">dev blog</a>
                <div class="col-md-8 col-sm-12">
                     <div class="about-thumb">
                          <!-- SECTION TITLE -->
@@ -97,6 +97,19 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image4.5.png" class="image-popup">
                               <div class="work-thumb-overlay">
+                                   <h2>Shape Buster</h2><h4 class="white-color">XD / Unity</h4></br>
+                                   <h4>Try to draw the best circle!<h4>
+                              </div>
+                              <img src="images/work-image7.jpg" class="img-responsive" alt="Work 1">
+                         </a>
+                    </div>
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-image4.5.png" class="image-popup">
+                              <div class="work-thumb-overlay">
                                    <h2>Sam's Aerial Fishing</h2><h4 class="white-color">Java / Photoshop</h4></br></br></br></br>
                                    <h4>Gains hunter and fishing xp with the "aerial fishing" method.<h4>
                               </div>
@@ -118,6 +131,12 @@ http://www.tooplate.com/view/2087-kalay
                     </div>
                </div>
 
+
+          </div>
+     </div>
+     <div class="container">
+          <div class="row">
+
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
@@ -130,13 +149,6 @@ http://www.tooplate.com/view/2087-kalay
                          </a>
                     </div>
                </div>
-
-
-          </div>
-     </div>
-     <div class="container">
-          <div class="row">
-
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
@@ -149,6 +161,7 @@ http://www.tooplate.com/view/2087-kalay
                          </a>
                     </div>
                </div>
+
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
@@ -158,19 +171,6 @@ http://www.tooplate.com/view/2087-kalay
                                    <h4 class="white-color">Photoshop</h4>
                               </div>
                               <img src="images/work-image3.png" class="img-responsive" alt="Work 3">
-                         </a>
-                    </div>
-               </div>
-
-               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
-                    <!-- WORK THUMB -->
-                    <div class="work-thumb">
-                         <a href="images/coming-soon.png" class="image-popup">
-                              <div class="work-thumb-overlay">
-                                   <h2>Coming soon</h2>
-                                   <h4 class="white-color">Placeholder</h4>
-                              </div>
-                              <img src="images/coming-soon.png" class="img-responsive" alt="Work 2">
                          </a>
                     </div>
                </div>
@@ -260,7 +260,7 @@ http://www.tooplate.com/view/2087-kalay
                               <h2>About the Artist</h2>
                               <p>Art is something I have always appreciated. Growing up in the quieter Cornwall, Ontario, my parents surrounded me with different mediums and interests. At 24 now, I’ve found my passion in UI/UX design.</p> 
 <p>My name is Sam Switzer. I am an artist and developer. My art reminds others of what you would see in a concept artbook. When I’m not sketching flash sheets or using Adobe Suite, I am developing bot scripts or games for my friends to play. My inspirations include Yoji Shinkawa, Rockstar, Blizzard, and Source. My process is simply to find the passion behind what I’m working with, really focus in on my work, and continue to refine it for the rest of it’s life.
-You can read about what I’m currently working on <a href="updates.html">here</a>, or read in detail about my experience <a href="files/Resume_2_1_1.pdf">here</a>. </p>
+You can read about what I’m currently working on <a href="devblog.html">here</a>, or read in detail about my experience <a href="files/Resume_2_1_1.pdf">here</a>. </p>
                          </div>
                     </div>
                </div>
@@ -269,11 +269,10 @@ You can read about what I’m currently working on <a href="updates.html">here</
                     <div class="wow fadeInUp contact-info" data-wow-delay="0.4s">
                          <div class="section-title">
                               <h2>Contact Info</h2>
-                         </div>
-
                          <p><i class="fa fa-map-marker"></i><a href="https://goo.gl/maps/1qrbaTCGVmSfpUKq8"> Cornwall ON, Canada</a></p>
                          <p><i class="fa fa-comment"></i> <a href="mailto:sam.d.switzer@gmail.com">sam.d.switzer@gmail.com</a></p>
                          <p><i class="fa fa-discord"></i> Sam#6928</p>
+                         </div>
                     </div>
                </div>
 
@@ -287,7 +286,7 @@ You can read about what I’m currently working on <a href="updates.html">here</
         <div class="row">
 
                <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="0.8s">
-                    <p class="white-color">Copyright &copy; 2021 Samuel Switzer</p>
+                    <p class="white-color">Copyright &copy; 2022 Samuel Switzer</p>
                     <div class="wow fadeInUp" data-wow-delay="1s">
                          <ul class="social-icon">
                               <li><a href="https://www.artstation.com/ssaamm" class="fa fa-artstation"></a></li>
